# StashExtract_GUI

./: .gitignore  LICENSE  README.md  __init__.py  __main__.py  musicboardextract.py  musicboardextract.spec  requirements.txt  setup.cfg  setup.py  stashextract.py  stashextract.spec
.github/workflows/: build_and_release.yml  python-app.yml
musicboardextract_gui/: __init__.py  __main__.py
musicboardextract_gui/modules/: __init__.py  app_setup.py  button_setup.py  extract_data.py  input_module.py  loading_screen_setup.py
musicboardextract_gui/utils/: process_loading.py
stashextract_gui/: __init__.py
stashextract_gui/modules/: __init__.py  app_setup.py  button_setup.py  extract_data.py  input_module.py  loading_screen_setup.py
stashextract_gui/utils/: process_loading.py
