[metadata]
name = MusicboardExtracted_GUI
version = 0.1
author = edequinox
author_email = jmarquesnox@gmail.com
description = MusicboardExtract_GUI is a graphical user interface (GUI) application for extracting music lists and other personal data from Musicboard.

[options]
packages = find:
install_requires =
    tkinter
    PIL
    customtkinter
    # Add any other dependencies your project needs

[options.packages.find]
exclude =
    tests